Updated links to pages

--- a/publications.html
+++ b/publications.html
@@ -17,9 +17,9 @@
                 <a href="index.html">Your Name</a>
             </div>
             <div class="nav-menu" id="nav-menu">
-                <a href="index.html" class="nav-link">Home</a>
+                <a href="index.html#home" class="nav-link">Home</a>
                 <a href="index.html#about" class="nav-link">About</a>
-                <a href="index.html#experience" class="nav-link">Experience</a>
+                <a href="experience.html" class="nav-link">Experience</a>
                 <a href="index.html#projects" class="nav-link">Projects</a>
                 <a href="publications.html" class="nav-link active">Publications</a>
                 <a href="index.html#talks" class="nav-link">Talks</a>
