--- a/work-experience.html
+++ b/work-experience.html
@@ -18,11 +18,10 @@
             <div class="nav-menu">
                 <a href="index.html#home" class="nav-link">Home</a>
                 <a href="index.html#about" class="nav-link">About</a>
-                <a href="work-experience.html" class="nav-link active">Work Experience</a>
-                <a href="academic-experience.html" class="nav-link">Academic Experience</a>
+                <a href="experience.html" class="nav-link">Experience</a>
                 <a href="index.html#projects" class="nav-link">Projects</a>
-                <a href="publications.html" class="nav-link">Publications</a>
-                <a href="talks.html" class="nav-link">Talks</a>
+                <a href="index.html#publications" class="nav-link">Publications</a>
+                <a href="index.html#talks" class="nav-link">Talks</a>
                 <a href="index.html#contact" class="nav-link">Contact</a>
             </div>
         </div>
