--- a/experience.html
+++ b/experience.html
@@ -21,8 +21,8 @@
                 <a href="index.html#about" class="nav-link">About</a>
                 <a href="experience.html" class="nav-link active">Experience</a>
                 <a href="index.html#projects" class="nav-link">Projects</a>
-                <a href="publications.html" class="nav-link">Publications</a>
-                <a href="talks.html" class="nav-link">Talks</a>
+                <a href="index.html#publications" class="nav-link">Publications</a>
+                <a href="index.html#talks" class="nav-link">Talks</a>
                 <a href="index.html#contact" class="nav-link">Contact</a>
             </div>
             <div class="nav-toggle" id="nav-toggle">
