--- a/talks.html
+++ b/talks.html
@@ -17,12 +17,12 @@
                 <a href="index.html"><!-- Dynamic name --></a>
             </div>
             <div class="nav-menu" id="nav-menu">
-                <a href="index.html" class="nav-link">Home</a>
+                <a href="index.html#home" class="nav-link">Home</a>
                 <a href="index.html#about" class="nav-link">About</a>
-                <a href="index.html#experience" class="nav-link">Experience</a>
+                <a href="experience.html" class="nav-link">Experience</a>
                 <a href="index.html#projects" class="nav-link">Projects</a>
-                <a href="publications.html" class="nav-link">Publications</a>
-                <a href="talks.html" class="nav-link active">Talks</a>
+                <a href="index.html#publications" class="nav-link">Publications</a>
+                <a href="index.html#talks" class="nav-link">Talks</a>
                 <a href="index.html#contact" class="nav-link">Contact</a>
             </div>
             <div class="nav-toggle" id="nav-toggle">
