Added new info and changed pfp

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     </div>
                 </div>
                 <div class="hero-image">
-                    <img src="images/profile.png" alt="Your Name" class="profile-img">
+                    <img src="" alt="Your Name" class="profile-img">
                 </div>
             </div>
         </div>
